<resources>
    <string name="app_name">FSE_M3A1_APP</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign-Up</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>

    <string-array name="user_types">
        <item>FACULTY</item>
        <item>STUDENT</item>
    </string-array>
</resources>